--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -28,10 +28,9 @@ spec:
               mountPath: /var/lib/grafana
       volumes:
         - name: grafana-storage
-          emptyDir: {}
-
+          persistentVolumeClaim:
+            claimName: grafana-pvc # Specify the name of the PVC to be created
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
