--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-grafana
+  labels:
+    app: grafana
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
