--- a/devfile.yaml
+++ b/devfile.yaml
@@ -17,11 +17,23 @@ components:
       deployment/memoryLimit: 256Mi
       deployment/memoryRequest: 256Mi
       deployment/container-port: 3000
-      persistentVolumeClaim/accessMode: ReadWriteOnce
-      persistentVolumeClaim/storageClassName: standard
-      persistentVolumeClaim/storage: 1Gi
     kubernetes:
       uri: deploy/deployment.yaml
+innerLoop:
+  objects:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
+        name: pvc-grafana
+        labels:
+          app: grafana
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
+        storageClassName: standard
 commands:
   - id: grafana-build
     apply:
